# devworld-2025

./: README.md  pyproject.toml
agent_w_mcp/: agent_w_mcp.ipynb  agent_w_mcp.py  bash_tool_fastmcp.py  server.json
baseline/: baseline.ipynb
basic_agent/: agents.ipynb
multi_agent/: multi-agent.py  multi_agent.ipynb
